[gd_scene load_steps=18 format=3 uid="uid://bd8f40og8ms53"]

[ext_resource type="PackedScene" uid="uid://bgj7arkqm4aa6" path="res://scenes/creatures/enemy.tscn" id="1_okn81"]
[ext_resource type="Texture2D" uid="uid://7kdqfryb3dkp" path="res://assets/charger-alpha.png" id="2_73vpm"]
[ext_resource type="Texture2D" uid="uid://cqiksaji3x2wf" path="res://assets/particles/dust.png" id="2_e7db1"]
[ext_resource type="Script" path="res://scenes/creatures/charger-alpha.gd" id="4_5cuig"]
[ext_resource type="PackedScene" uid="uid://t0raixkbvbm1" path="res://scenes/creatures/damage_area.tscn" id="5_6w7i8"]
[ext_resource type="Script" path="res://scenes/creatures/RockLine.gd" id="6_23d5b"]

[sub_resource type="Curve" id="Curve_fvt3x"]
max_value = 2.0
_data = [Vector2(0, 1), 0.0, 0.854545, 0, 1, Vector2(1, 1.85455), 0.854545, 0.0, 1, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_iof1l"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.294118)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o31wx"]
resource_local_to_scene = true
size = Vector2(17.9548, 2.47565)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2g7m7"]
resource_local_to_scene = true
size = Vector2(41.75, 14.125)

[sub_resource type="Animation" id="Animation_ns6f3"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(0, 0, 64, 64), Rect2(64, 0, 64, 64)]
}

[sub_resource type="Animation" id="Animation_4kq02"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 64, 64)]
}

[sub_resource type="Animation" id="Animation_qkku5"]
resource_name = "run"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(256, 0, 64, 64), Rect2(320, 0, 64, 64), Rect2(384, 0, 64, 64)]
}

[sub_resource type="Animation" id="Animation_5utif"]
resource_name = "stunned"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(128, 0, 64, 64), Rect2(192, 0, 64, 64)]
}

[sub_resource type="Animation" id="Animation_tybl7"]
resource_name = "slide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(384, 0, 64, 64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vxlce"]
_data = {
"RESET": SubResource("Animation_4kq02"),
"idle": SubResource("Animation_ns6f3"),
"run": SubResource("Animation_qkku5"),
"slide": SubResource("Animation_tybl7"),
"stunned": SubResource("Animation_5utif")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rqiwg"]
resource_local_to_scene = true
size = Vector2(35, 13)

[node name="ChargerAlpha" instance=ExtResource("1_okn81")]
scale = Vector2(1.3, 1.3)
corpse_path = "res://scenes/creatures/charger-alpha-corpse.tscn"
health = 600
knockback_resistance = 100.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="." index="0"]
position = Vector2(-7, 0)
emitting = false
amount = 16
texture = ExtResource("2_e7db1")
direction = Vector2(-1, -1)
gravity = Vector2(0, 1)
initial_velocity_min = 5.0
initial_velocity_max = 8.0
scale_amount_min = 0.1
scale_amount_max = 0.2
scale_amount_curve = SubResource("Curve_fvt3x")
color_ramp = SubResource("Gradient_iof1l")

[node name="Sprite2D" parent="." index="1"]
position = Vector2(0, -32)
texture = ExtResource("2_73vpm")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_o31wx")

[node name="Hitbox" parent="." index="3"]
position = Vector2(0, -9)

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_2g7m7")

[node name="MovementAnimations" type="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_vxlce")
}

[node name="AI" type="Node2D" parent="." index="6"]
script = ExtResource("4_5cuig")

[node name="RayCast2D" type="RayCast2D" parent="AI" index="0"]
position = Vector2(0, -3)
target_position = Vector2(80, 0)

[node name="DamageArea" parent="." index="7" instance=ExtResource("5_6w7i8")]
position = Vector2(0, -8)
damage = 20

[node name="CollisionShape2D" parent="DamageArea" index="0"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_rqiwg")

[node name="RockLine" type="Node2D" parent="." index="8"]
script = ExtResource("6_23d5b")

[node name="Marker2D" type="Marker2D" parent="RockLine" index="0"]

[node name="Marker2D2" type="Marker2D" parent="RockLine" index="1"]

[editable path="DamageArea"]
